--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,82 @@
 annotated-types==0.7.0
 anyio==4.7.0
+attrs==24.3.0
+beautifulsoup4==4.12.3
+behave==1.2.6
 certifi==2024.12.14
+chardet==5.2.0
+charset-normalizer==3.4.1
 click==8.1.7
+colorama==0.4.6
+cssselect==1.2.0
 dnspython==2.7.0
 email_validator==2.2.0
+exceptiongroup==1.2.2
+execnet==2.1.1
 fastapi==0.115.6
 fastapi-cli==0.0.7
+fasteners==0.19
+filelock==3.16.1
 h11==0.14.0
+html5lib==1.1
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
-Jinja2==3.1.4
+iniconfig==2.0.0
+Jinja2==3.1.5
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mycdp==1.1.0
+outcome==1.3.0.post0
+packaging==24.2
+parameterized==0.9.0
+parse==1.20.2
+parse_type==0.6.4
+pdbp==1.6.1
+platformdirs==4.3.6
+pluggy==1.5.0
+psycopg2==2.9.10
 pydantic==2.10.3
+pydantic-settings==2.7.1
 pydantic_core==2.27.1
 Pygments==2.18.0
+pynose==1.5.3
+pyotp==2.9.0
+PySocks==1.7.1
+pytest==8.3.4
+pytest-html==4.0.2
+pytest-metadata==3.1.1
+pytest-ordering==0.6
+pytest-rerunfailures==15.0
+pytest-xdist==3.6.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.12.0
+sbvirtualdisplay==1.4.0
+selenium==4.27.1
+seleniumbase==4.33.12
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+SQLAlchemy==2.0.36
 starlette==0.41.3
+tabcompleter==1.4.0
+trio==0.27.0
+trio-websocket==0.11.1
 typer==0.15.1
 typing_extensions==4.12.2
+urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.3
+webencodings==0.5.1
+websocket-client==1.8.0
 websockets==14.1
+wsproto==1.2.0
